--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -155,7 +155,8 @@
     {% endif %}
 
     <div class="footer__copyright">
-      <p>&copy; {{ 'layout.footer.copyright' | t }} {{ 'now' | date: "%Y" }}  </p>
+      <p>&copy; {{ 'layout.footer.copyright' | t }} {{ 'now' | date: "%Y" }}</p>
+      <a href="https://gravitydecke.de/pages/impressum">Impressum</a> | <a href="https://gravitydecke.de/pages/agb">AGB</a> | <a href="https://gravitydecke.de/pages/datenschutz">Datenschutz</a>
     </div>
   </div>
 </footer>
