--- a/snippets/banner.liquid
+++ b/snippets/banner.liquid
@@ -15,7 +15,6 @@
      border: 1px #fac636 solid;
      border-radius: 5px;
      margin: 20px;
-     box-shadow: 0px 0px 7px 0px #c0c0c0;
    }
 
    .set-upsell-img {
@@ -108,7 +107,7 @@
          <div class="set-upsell-text">
             <div class="set-upsell-text-p">
                <p style="font-size:18px">
-                  <b>Neu!</b> Interesse am Gravity Set <br> (4-Jahreszeiten- und Baumwollbezug)?
+                  Interesse am <b>Gravity Set</b> <br> (4-Jahreszeiten- und Baumwollbezug)?
                </p>
             </div>
             <a href="#gravity_set" class="bttn btn-banner">ZU DEN SETS</a>
