--- a/assets/theme.css
+++ b/assets/theme.css
@@ -26,6 +26,7 @@
   --height-button:48px;
   --height-nav-button:44px;
   --max-width:3000px;
+  --max-width-content:1600px;
   --max-width-medium:775px;
   --max-width-small:500px;
   --max-width-centered-copy:600px;
@@ -163,6 +164,11 @@ a{
       grid-template-columns:repeat(4, 1fr)
   }
     }
+@media (min-width: 60em){
+.grid-display.grid-display--one-fifth{
+      grid-template-columns:repeat(5, 1fr)
+  }
+    }
 .grid-display.grid-display--has-products.grid-display--square .placeholder-svg, .grid-display.grid-display--has-products.grid-display--landscape .placeholder-svg, .grid-display.grid-display--has-products.grid-display--portrait .placeholder-svg{
         position:absolute;
         top:50%;
@@ -242,9 +248,9 @@ html.supports-no-cookies .supports-cookies{
 .hide{
   display:none !important;
 }
-.section-borderable + .section-borderable > .section--bordered{
+/*.section-borderable + .section-borderable > .section--bordered{
   border-top:1px solid var(--color-border);
-}
+}*/
 .section{
   max-width:var(--max-width);
   margin:0 auto;
@@ -529,37 +535,37 @@ p a{
   margin-top:0;
   margin-bottom:0;
 }
-.rte h1{
+.rte h1, .h1{
     font-size:2.2em;
     font-family:var(--font-heading);
     font-weight:var(--font-heading-weight);
     font-style:var(--font-heading-style);
     line-height:var(--line-height-heading);
   }
-.rte h2{
+.rte h2, .h2{
     font-size:1.8em;
     font-family:var(--font-heading);
     font-weight:var(--font-heading-weight);
     font-style:var(--font-heading-style);
     line-height:var(--line-height-heading-2);
   }
-.rte h3{
+.rte h3, .h3{
     font-size:1.4em;
     font-family:var(--font-heading);
     font-weight:var(--font-heading-weight);
     font-style:var(--font-heading-style);
   }
-.rte h4{
+.rte h4, .h4{
     font-size:1.2em;
     font-family:var(--font-heading);
     font-weight:var(--font-heading-weight);
     font-style:var(--font-heading-style);
   }
-.rte h5{
+.rte h5, .h5{
     font-size:1em;
     font-weight:var(--font-body-bold-weight);
   }
-.rte h6{
+.rte h6, .h6{
     font-size:0.8em;
     font-weight:var(--font-body-bold-weight);
     text-transform:uppercase;
@@ -4988,7 +4994,8 @@ select{
 }
   }
 .footer__col-title{
-  color:var(--color-footer-text-meta);
+  color:var(--color-contrast-secondary-button-bg);
+    font-weight: 500;
 }
 .footer__col-text,
 .footer__col-list,
@@ -5026,6 +5033,10 @@ select{
     width:auto
 }
   }
+.list-item a{
+  color: white;
+  transition:opacity 0.25s;
+}
 .footer__col-list .list-item:first-of-type{
       margin-top:0;
     }
@@ -5042,7 +5053,7 @@ select{
   font-size:var(--font-size-body-small);
 }
 .footer__copyright a{
-    color:var(--color-footer-text-meta);
+    color: white;
     transition:opacity 0.25s;
   }
 .footer__copyright a:hover{
@@ -5083,48 +5094,51 @@ select{
   position:relative;
   z-index:var(--z-index-header);
   color:var(--color-header-text);
-  border-bottom:1px solid;
-  border-color:var(--color-header-border)
+  margin: auto;
 }
 .header:not(.header--transparent){
-    color:var(--color-header-text);
-    background-color:var(--color-header-bg);
-  }
+  color:var(--color-header-text);
+  background-color:var(--color-header-bg);
+}
 .first-section-is-full-width .header:not(.header--transparent),
-  .header--no-border:not(.header--transparent){
-    border-bottom:0;
-  }
+
+.header--no-border:not(.header--transparent){
+  border-bottom:0;
+}
 .header .header__logo-wrapper{
     margin:0;
     justify-content:flex-start;
     display:flex
   }
+  
 @media (max-width: 60em){
-
   .header .header__logo-wrapper{
-      flex:1 !important;
-      display:flex;
-      justify-content:center
+    flex:1 !important;
+    display:flex;
+    justify-content:center
   }
-    }
+}
+  
 @media (min-width: 60em){
-
   .header .header__logo-wrapper{
-      order:-1
+    order:-1
   }
-    }
+}
+
 .header .header__nav{
-    display:none;
-  }
+  display:none;
+}
+  
 @media (min-width: 60em){
-    .header:not(.header--always-mobile) .header__logo-image{
-        margin:0
-    }
-      }
+  .header:not(.header--always-mobile) .header__logo-image{
+     margin:0
+  }
+}
+
 .header.header--always-mobile .header__logo-wrapper{
-      order:unset;
-      flex:1
-    }
+  order:unset;
+  flex:1
+}
 @media (min-width: 60em){
     .header.header--always-mobile .header__logo-wrapper{
         display:flex;
@@ -5253,7 +5267,8 @@ select{
   margin:0 auto;
   padding:0 var(--spacing-medium);
   font-size:var(--font-size-navigation);
-  letter-spacing:var(--font-letter-spacing-navigation)
+  letter-spacing:var(--font-letter-spacing-navigation);
+  max-width: var(--max-width-content);
 }
 @media (min-width: 38em){
 .header__content{
@@ -7048,7 +7063,10 @@ select{
       pointer-events:none;
     }
 .collection{
-  margin-bottom:var(--spacing-extra-large)
+  margin-bottom:var(--spacing-extra-large);
+  margin-left: auto;
+  margin-right: auto;
+  max-width: var(--max-width-content);
 }
 @media (min-width: 60em){
 .collection{
@@ -7413,7 +7431,7 @@ select{
   }
 .product-page-wrapper .interactive-media, .page-width .interactive-media{
     position:relative;
-    width:100%
+    max-width: var(--max-width-content);
   }
 @media (min-width: 60em){
 
@@ -7496,6 +7514,9 @@ select{
     }
 .product-page-wrapper .accordion__text, .page-width .accordion__text{
     padding-bottom:0;
+  }
+.product__description .rte a{
+  	text-decoration: none;
   }
 @media (min-width: 60em){
     .product-page-wrapper .media-wrapper.hidden, .page-width .media-wrapper.hidden{
@@ -11965,6 +11986,10 @@ div[data-media-type='external_video'] iframe{
   background-size:cover !important;
   opacity:0;
 }
+.product-item__details a{
+  font-weight:600;
+  color: #3a3a3a;
+}
 .button{
   display:inline-block;
   vertical-align:middle;
@@ -12357,6 +12382,9 @@ div[data-media-type='external_video'] iframe{
   }
 .carousel{
   position:relative;
+}
+.carousel__slides .collection-list{
+  padding-left: 17px;	
 }
 @media (min-width: 38em){
     .carousel:hover .carousel__navigation, .carousel:focus .carousel__navigation, .user-is-tabbing .carousel .carousel__navigation{
@@ -13605,6 +13633,7 @@ div[data-media-type='external_video'] iframe{
   --flyout-width:335px;
   --checkbox-width:10px;
 }
+  
 .cart-flyout{
   width:var(--flyout-width);
   position:fixed;
@@ -15162,9 +15191,10 @@ div[data-media-type='external_video'] iframe{
     display:none;
   }
 .product-feature-widget__payment-icon{
-  display:inline-block;
-  width:38px;
-  margin-right:6px;
+  display: inline-block;
+  width: 38px;
+  margin-right: 6px;
+  padding-bottom: 10px;
 }
 .product-feature-widget__payment-icon svg{
     display:block;
@@ -16479,7 +16509,9 @@ model-viewer{
     }
 
 /* General - Yurith */
-    
+a{
+  color: #828282;
+}
 .general-container-width{
   max-width: 1200px;
   margin-left: auto;
@@ -16488,9 +16520,6 @@ model-viewer{
     
 .product-price_css, .price-item--sale{
   color: #DD2200;
-}
-    
-.product-price_css{
   font-weight: bold;
 }
 @media (min-width: 38em){
@@ -16513,7 +16542,7 @@ model-viewer{
 .image-with-list .media{
   display: flex;
   -webkit-box-align: start;
-  align-items: flex-start;
+  align-items: center;
 }
 .image-with-list .media-body{
   -webkit-box-flex: 1;
@@ -16525,10 +16554,69 @@ model-viewer{
   width: 100px;
   text-align: center;
 }
+.border--top{
+  border-top:1px solid #c1c1c1
+}
 @media(max-width: 768px){
   .image-with-list .media span{
     width: 60px;
     text-align:left;
     align-self:center;
   }
+  .payment-icons{
+  	display: block;
+  }
+  .payment-icons li{
+  	width: 38px;
+  }
+  .image-with-list .media-body{
+    margin-left: 20px;
+  }
 }
+@media(max-width: 640px){
+  .image-with-list li{
+    padding: 10px 40px;
+  }
+}
+@media only screen and (max-width: 768px){
+  .hide-small{
+    display: none;
+  }
+}
+@media only screen and (min-width: 769px){
+  .hide-medium-up{
+    display: none;
+  }
+}
+@media only screen and (max-width: 768px){
+  .search-template__results{
+  	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .search-template__item{
+  	width: 45%;
+    margin: 2.5% 0;
+    display: flex;
+  }
+  .search-template__content .type-body-regular{
+  	word-break: break-word;
+    overflow: hidden;
+    line-height: 2rem;
+    max-height: 150px;
+    -webkit-box-orient: vertical;
+    display: block;
+    display: -webkit-box;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 7;
+  }
+  .search-template__content h3{
+  	word-break: break-word;
+  }
+  .search-template__image{
+  	display: inherit;
+    margin: 0 auto;
+  }
+}
+
