--- a/sections/image-with-video.liquid
+++ b/sections/image-with-video.liquid
@@ -1,36 +1,62 @@
 {% style %}
   .image-with-video__inner{
     display: flex;
+	flex-direction: column;
+  }
+  .image-with-video__first_wrapper{
+	display: flex;
+  }
+  .image-with-video__button{
+	display: flex;
+	justify-content: center;
   }
   .video_wrapper{
-    margin-top: -14%;
+    margin-top: -5%;
+	position: relative;
   }
 
   .image-with-video__text-container{
     padding: 0 30px;
   }
 
-  @media only screen and (min-width: 999px){
-    .video_wrapper, .image-with-video__text-container{
-      width: 50%;
-    }
+@media only screen and (min-width: 1400px){
+  .video_wrapper, .image-with-video__text-container{
+    width: 50%;
   }
+  .video_wrapper{
+    padding-bottom: 35%;
+  }
+}
+@media only screen and (min-width: 1000px) and (max-width: 1399px){
+  .video_wrapper, .image-with-video__text-container{
+    width: 50%;
+  }
+  .video_wrapper{
+    padding-bottom: 50%;
+  }
+}
 
-  @media only screen and (max-width: 999px){
-    .image-with-video__inner{
-      flex-wrap: wrap;
-    }
-    .video_wrapper, .image-with-video__text-container{
-      width: 100%;
-    }
-    .video_wrapper{
-      order: 1;
-    }
-    .image-with-video__text-container{
-      order: 2;
-      padding-top: 30px;
-    }
+
+@media only screen and (max-width: 999px){
+  .image-with-video__first_wrapper {
+    display: grid;
   }
+  .image-with-video__inner{
+    flex-wrap: wrap;
+  }
+  .video_wrapper, .image-with-video__text-container{
+    width: 100%;
+  }
+  .video_wrapper{
+    order: 2;
+    margin: 10% 0px 10%;
+    padding-bottom: 55%;
+  }
+  .image-with-video__text-container{
+    order: 1;
+    padding-top: 30px;
+  }
+}
 {% endstyle %}
 
 {% liquid
@@ -93,7 +119,7 @@
 {% endif %}
 
 {% capture image_block %}
-<div class="video_wrapper" style="padding-bottom: 56.25%; position: relative;">
+<div class="video_wrapper">
   <iframe style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;" src="https://player.vimeo.com/video/386953516?autopause=0&portrait=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"  width="100%" height="100%" frameborder="0"><small>Vimeo embedding powered by <a href="https://embed.tube">embed.tube</a></small></iframe>
 </div>
 {% endcapture %}
@@ -105,83 +131,88 @@
   style="--media-focal-alignment: {{ focal_alignment }};"
 >
   <div class="image-with-video__inner general-container-width">
+	<div class="image-with-video__first_wrapper">
+      {% if image_position == 'left' %}
+        {{ image_block }}
+      {% endif %}
 
-    {% if image_position == 'left' %}
-      {{ image_block }}
-    {% endif %}
-
-    <div class="image-with-video__text-container">
-      <div class="image-with-text__text">
-
-        <div
-          class="image-with-text__text-block image-with-text__text-block--{{ text_alignment }} animation__staggered-children-fade-in{% if background %} pa3{% endif %}"
-          style="background-color: {{ text_container_color }}; color: {{ text_color }};"
-        >
-          {%- for block in section.blocks -%}
-            {%- case block.type -%}
-              {%- when "overline" -%}
-                {% unless block.settings.overline == blank  %}
-                  <div
-                    {{ block.shopify_attributes }}
-                    class="text-block__item text-block__overline overline"
-                    data-theme-editor-setting="section.{{ id }}.overline"
-                  >
-                    {{ block.settings.overline }}
-                  </div>
-                {% endunless %}
-              {%- when "heading" -%}
-                {%- unless block.settings.heading == blank -%}
-                  <h2
-                    {{ block.shopify_attributes }}
-                    class="text-block__item text-block__heading type-heading-1"
-                    data-theme-editor-setting="section.{{ id }}.heading"
-                    style="max-width: {{ block.settings.text_max_width }}rem;"
-                  >
-                    {{ block.settings.heading }}
-                  </h2>
-                {%- endunless -%}
-              {%- when "subheading" -%}
-                {%- unless block.settings.subheading == blank -%}
-                  <div
-                    {{ block.shopify_attributes }}
-                    class="text-block__subheading type-body-regular rte"
-                    data-theme-editor-setting="section.{{ id }}.subheading"
-                    style="max-width: {{ block.settings.text_max_width }}rem;"
-                  >
-                    {{ block.settings.subheading }}
-                  </div>
-                {%- endunless -%}
-              {%- when "button" -%}
-                {% if block.settings.link != blank and block.settings.link_text != blank %}
-                  <a
-                    {{ block.shopify_attributes }}
-                    href="{{ block.settings.link }}"
-                    class="text-block__item text-block__button bttn bttn--secondary bttn--inline"
-                    data-theme-editor-setting="section.{{ id }}.link_text"
-                    style="
-                      --color-secondary-button-bg: {{ button_background_color }};
-                      --color-secondary-button-text: {{ text_color }};
-                      --color-secondary-button-border: {{ button_background_color | color_modify: 'alpha', 0.2 }};
-                      --color-secondary-button-meta: {{ color_button_background_meta }};
-                      --color-contrast-secondary-button-bg: {{ button_background_color }};
-                      --color-contrast-secondary-button-text: {{ text_color }};
-                      --color-contrast-secondary-button-border: {{ button_background_color | color_modify: 'alpha', 0.2 }};
-                      --color-contrast-secondary-button-meta: {{ color_button_background_meta }};
-                    "
-                  >
-                    {{ block.settings.link_text }}
-                  </a>
-                {% endif %}
-            {%- endcase -%}
-          {%- endfor -%}
+      <div class="image-with-video__text-container">
+        <div class="image-with-text__text">
+          <div
+            class="image-with-text__text-block image-with-text__text-block--{{ text_alignment }} animation__staggered-children-fade-in{% if background %} pa3{% endif %}"
+            style="background-color: {{ text_container_color }}; color: {{ text_color }};"
+          >
+            {%- for block in section.blocks -%}
+              {%- case block.type -%}
+                {%- when "overline" -%}
+                  {% unless block.settings.overline == blank  %}
+                    <div
+                      {{ block.shopify_attributes }}
+                      class="text-block__item text-block__overline overline"
+                      data-theme-editor-setting="section.{{ id }}.overline"
+                    >
+                      {{ block.settings.overline }}
+                    </div>
+                  {% endunless %}
+                {%- when "heading" -%}
+                  {%- unless block.settings.heading == blank -%}
+                    <h2
+                      {{ block.shopify_attributes }}
+                      class="text-block__item text-block__heading type-heading-1"
+                      data-theme-editor-setting="section.{{ id }}.heading"
+                    >
+                      {{ block.settings.heading }}
+                    </h2>
+                  {%- endunless -%}
+                {%- when "subheading" -%}
+                  {%- unless block.settings.subheading == blank -%}
+                    <div
+                      {{ block.shopify_attributes }}
+                      class="text-block__subheading type-body-regular rte"
+                      data-theme-editor-setting="section.{{ id }}.subheading"
+                    >
+                      {{ block.settings.subheading }}
+                    </div>
+                  {%- endunless -%}
+              {%- endcase -%}
+            {%- endfor -%}
+          </div>
         </div>
-
       </div>
-    </div>
+    
 
-    {% if image_position == 'right' %}
-      {{ image_block }}
-    {% endif %}
+      {% if image_position == 'right' %}
+        {{ image_block }}
+      {% endif %}
+
+    </div>
+  {%- for block in section.blocks -%}
+    {%- case block.type -%}
+      {%- when "button" -%}
+        {% if block.settings.link != blank and block.settings.link_text != blank %}
+    	<div class="image-with-video__button">
+          <a
+             {{ block.shopify_attributes }}
+             href="{{ block.settings.link }}"
+             class="text-block__item text-block__button bttn bttn--inline"
+             data-theme-editor-setting="section.{{ id }}.link_text"
+             style="
+                    --color-secondary-button-bg: {{ button_background_color }};
+                    --color-secondary-button-text: {{ text_color }};
+                    --color-secondary-button-border: {{ button_background_color | color_modify: 'alpha', 0.2 }};
+                    --color-secondary-button-meta: {{ color_button_background_meta }};
+                    --color-contrast-secondary-button-bg: {{ button_background_color }};
+                    --color-contrast-secondary-button-text: {{ text_color }};
+                    --color-contrast-secondary-button-border: {{ button_background_color | color_modify: 'alpha', 0.2 }};
+                    --color-contrast-secondary-button-meta: {{ color_button_background_meta }};
+                    "
+             >
+            {{ block.settings.link_text }}
+          </a>
+    	</div>
+        {% endif %}
+    {%- endcase -%}
+  {%- endfor -%}
   </div>
 </section>
 
