--- a/sections/main-cart.liquid
+++ b/sections/main-cart.liquid
@@ -3,6 +3,7 @@
   data-section-id="{{ section.id }}" 
   data-section-type="cart"
   data-dynamic-cart-enabled="{{ section.settings.cart_ajax_enable }}"
+  data-ajax-cart-section
 >
 
   <h1 class="type-heading-1 mt0 mb3">{{ 'cart.general.title' | t }}</h1>
@@ -16,6 +17,7 @@
 
       <div class="cart-template__items" data-cart-items>
         {% for item in cart.items %}
+        {% assign item_index = forloop.index %}
           <div class="cart-template__item">
 
             <div class="cart-template__image">
@@ -61,60 +63,51 @@
 
                 {%- assign property_size = item.properties | size -%}
 
-                {% if property_size > 0 %}
-                  {% for p in item.properties %}
-                    {% unless p.last == blank %}
-                    {{ p.first }}:
+                {% comment %}
+                  {% if property_size > 0 %}
+                    {% for p in item.properties %}
+                      {% unless p.last == blank %}
+                      {{ p.first }}:
 
-                    {% if p.last contains '/uploads/' %}
-                      <a href="{{ p.last }}">{{ p.last | split: '/' | last }}</a>
-                    {% else %}
-                      {{ p.last }}
-                    {% endif %}
+                      {% if p.last contains '/uploads/' %}
+                        <a href="{{ p.last }}"
+                           data-ajax-cart-property-input="{{ item_index }}[{{ p.first }}]"
+                           >{{ p.last | split: '/' | last }}</a>
+                      {% else %}
+                        {{ p.last }}
+                      {% endif %}
 
-                    {% endunless %}
-                  {% endfor %}
-                {% endif %}
+                      {% endunless %}
+                    {% endfor %}
+                  {% endif %}
+                {% endcomment %}
               </div>
 
               <div class="cart-template__quantity" style="max-width: 100px;">
                 <label for="Quantity-{{ section.id }}" class="visually-hidden">{{ 'cart.general.item_quantity' | t }}</label>
                 <div class="product-form__item product-form__quantity" data-quantity-wrapper>
-                  <button
-                    type="button"
-                    class="product-form__quantity-button product-form__quantity-subtract-item"
-                    data-quantity-button="subtract"
-                    aria-label="{{ 'general.accessibility.quantity_add' | t }}"
-                  >
-                    {% render 'icon-minus', non_focusable: true %}
-                  </button>
-                  <input
-                    type="number" 
-                    name="updates[]" 
-                    id="updates_{{ item.key }}"
-                    value="{{ item.quantity }}"
-                    min="0"
-                    {% if item.variant.inventory_management == 'shopify' and item.variant.inventory_policy == 'deny' %}
-                    max="{{ item.variant.inventory_quantity }}"
-                    {% endif %}
-                    aria-label="{{ 'cart.general.item_quantity' | t }}"
-                    pattern="[0-9]*"
-                    class="product-form__input product-form__input--quantity" 
-                    data-quantity-input
-                    data-line-item-key="{{ item.key }}"
-                    data-line-index="{{ forloop.index }}"
-                    data-inventory-quantity="{{ item.variant.inventory_quantity }}"
-                    data-inventory-management="{{ item.variant.inventory_management }}"
-                    data-inventory-policy="{{ item.variant.inventory_policy }}"
-                  >
-                  <button
-                    type="button"
-                    class="product-form__quantity-button product-form__quantity-add-item"
-                    data-quantity-button="add"
-                    aria-label="{{ 'general.accessibility.quantity_subtract' | t }}"
-                  >
-                    {% render 'icon-plus', non_focusable: true %}
-                  </button>
+                  
+                  <!-- data-ajax-cart-request-button ajaxifies the "Minus one" button -->
+                  <a class="button_cart" 
+                     data-ajax-cart-request-button 
+                     href="{{ routes.cart_change_url }}?line={{ item_index }}&quantity={{ item.quantity | minus: 1 }}" >
+                    <svg width="10" viewBox="0 0 12 2" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 0H.75C.3 0 0 .4 0 1s.3 1 .75 1h10.5c.45 0 .75-.4.75-1s-.3-1-.75-1z" fill="#7A7A7A" fill-rule="nonzero"></path></svg>
+                  </a>
+                  
+              	  <!-- Input -->
+              	  <input class="input_cart" 
+                     data-ajax-cart-quantity-input="{{ item_index }}" 
+                     name="updates[]" 
+                     value="{{ item.quantity }}" 
+                     type="number" />
+                  
+                  <!-- data-ajax-cart-request-button ajaxifies the "Plus one" button -->
+                  <a class="button_cart"
+                     data-ajax-cart-request-button 
+                     href="{{ routes.cart_change_url }}?line={{ item_index }}&quantity={{ item.quantity | plus: 1 }}">
+                    <svg width="10" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11 5H7V1a1 1 0 00-2 0v4H1a1 1 0 000 2h4v4a1 1 0 002 0V7h4a1 1 0 000-2z" fill="currentColor" fill-rule="nonzero"></path></svg>
+                  </a>
+                  
                 </div>
               </div>
 
@@ -126,7 +119,7 @@
               </div>
 
               <div class="cart-template__remove">
-                <a href="{{ routes.cart_change_url }}?line={{ forloop.index }}&amp;quantity=0" class="bttn bttn--secondary bttn--small">
+                <a href="{{ routes.cart_change_url }}?line={{ forloop.index }}&amp;quantity=0" class="bttn bttn--small">
                   <small>{{ 'cart.general.remove' | t }}</small>
                 </a>
               </div>
@@ -181,18 +174,20 @@
 
           <div class="cart-template__footer-actions">
             {%- if section.settings.cart_ajax_enable == false -%}
-              <button type="submit" name="update" class="bttn bttn--secondary">{{ 'cart.general.update' | t }}</button>
+              <button type="submit" name="update" class="bttn">{{ 'cart.general.update' | t }}</button>
             {%- endif -%}
             <button type="submit" name="checkout" class="bttn bttn--primary">{{ 'cart.general.checkout' | t }}</button>
           </div>
 
-          {%- if additional_checkout_buttons -%}
-            <div class="cart-template__dynamic-checkout-buttons additional-checkout-buttons">
-              <div class="cart-template__dynamic-checkout-button-inner">
-                {{ content_for_additional_checkout_buttons }}
+          {% comment %}
+            {%- if additional_checkout_buttons -%}
+              <div class="cart-template__dynamic-checkout-buttons additional-checkout-buttons">
+                <div class="cart-template__dynamic-checkout-button-inner">
+                  {{ content_for_additional_checkout_buttons }}
+                </div>
               </div>
-            </div>
-          {%- endif -%}
+            {%- endif -%}
+          {% endcomment %}
         </div>
 
       </div>
