--- a/snippets/product_payment_methods.liquid
+++ b/snippets/product_payment_methods.liquid
@@ -1,16 +1,18 @@
 {% style %}
   .Product__PaymentList{
-    margin: 30px 0 0 0;
+    margin: 15px 0 0 0;
 	padding-left: 0;
   }
   .HorizontalList {
     list-style: none;
   }
-
   .HorizontalList__Item {
     display: inline-block;
     margin: 6px 8px 6px 8px;
   }
+.HorizontalList__Item:first-child{
+	margin-left: 0;
+}
 {% endstyle %}
 
 <ul class="Product__PaymentList HorizontalList">
