Left titles dev (#1)
* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/LeftTitles_dev

Committed from shop: Balance Gewichtsdecke

Co-authored-by: shopify[bot] <79544226+shopify[bot]@users.noreply.github.com>

--- a/sections/text-columns-with-images.liquid
+++ b/sections/text-columns-with-images.liquid
@@ -86,7 +86,7 @@
           <h3
             class="text-block__item text-block__heading type-heading-3"
             data-theme-editor-setting="section.{{ id }}.block.{{ block.id }}.title"
-            style="max-width: {{ block.settings.text_max_width }}em;"
+            style="max-width: {{ block.settings.text_max_width }}em; width:100%; text-align:{{ block.settings.title_text_alignment }}"
           >
             {{ block.settings.title }}</h3>
         {%- endif -%}
